# ipmanager

./: .env.example  .gitignore  Cargo.toml  README.md  setup_env.sh
.github/workflows/: ci.yml
assets/: ipxe.usb
docs/: api_specs.md  architecture.md  database_schema.md  operation_manual.md  security.md  setup_guide.md   troubleshooting.md
migrations/: 0001_init.sql  0002_hosts_location_lan.sql  0003_hosts_search_indexes.sql  0004_locations_lan_outlets.sql  0005_add_dhcp_pool_range_to_subnets.sql  0006_pxe_images.sql  0007_hosts_pxe_image.sql  20260115090000_setup_dnsmasq_schema.sql  20260201090000_audit_logs.sql  20260201093000_hosts_search_indexes.sql  20260201094500_subnets_defaults.sql  20260201100000_macmon_exports.sql  20260302090000_add_hosts_os_type.sql  20260305120000_add_ntp_server_to_subnets.sql  20260310120000_add_boot_logic.sql  20260310120000_add_next_boot_action_to_hosts.sql  20260315123000_host_authorization_fields.sql  20260315130000_add_rooms.sql
src/: config.rs  db.rs  dhcp_kea.rs  importer.rs  main.rs  web.rs
src/dhcp/: dnsmasq.rs
src/domain/: mac.rs
src/integrations/: macmon.rs  mod.rs
src/notifications/: email.rs
src/pxe/: mod.rs
static/: refind.conf
templates/: base.html  dhcp_kea.html  help.html  host_edit.html  host_show.html  hosts_import_preview.html  hosts_list.html  hosts_new.html  index.html  lan_outlets_list.html  lan_outlets_new.html  locations_list.html  locations_new.html  login.html  me.html  pxe_images_edit.html  pxe_images_list.html  pxe_images_new.html  pxe_menu.ipxe  subnets_edit.html  subnets_list.html  subnets_new.html
tests/: integration_db.rs
