[package]
name = "ipmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
thiserror = "1"
url = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }

axum = "0.8"

tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
time = "0.3"

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

bcrypt = "0.15"
sha2 = "0.10"

ipnet = "2"

tera = "1.20"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
