[package]
name = "ipmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
thiserror = "1"
url = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }

axum = { version = "0.7", features = ["multipart"] }
bytes = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

tower-sessions = { version = "0.13", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.14", features = ["postgres"] }
time = "0.3"
tower-http = { version = "0.6", features = ["fs", "trace"] }

sqlx = { version = "0.8.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "ipnetwork", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"

bcrypt = "0.15"
sha2 = "0.10"
cookie = { version = "0.18", features = ["key-expansion"] }

ipnet = "2"
ipnetwork = "0.20"

tera = "1.20"

html-escape = "0.2"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
